--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "BADBOY BY BADBOY MODER",
     "description": "pinky bot - re-edited from asena. World’s first UserBot made for WhatsApp.",
-    "logo": "https://avatars.githubusercontent.com/u/83832372?v=4",
+    "logo": "  https://telegra.ph/file/963fc9f1f216b97566c4a.jpg    ",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/afnanplk/lastpink",
     "website":   "under maintenance",
